--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-  worker:
+  collector:
     build:
       context: .
       dockerfile: Dockerfile-collector
